--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "test.c" "main.c" "lectura.c" "salida.c"
+idf_component_register(SRCS "test.c" "main.c" "boton.c" "eje.c" "motor.c"
                     INCLUDE_DIRS ".")
