se implementó driver nuevo de motores, falta mejorar logica.no compila

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "estructura.h": "c"
+        "estructura.h": "c",
+        "esp_log.h": "c",
+        "pulse_cnt.h": "c",
+        "freertos.h": "c"
     }
 }
