implementado puntero opaco, pero no anda. revisar problema con semaforo.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "estructura.h": "c",
         "esp_log.h": "c",
         "pulse_cnt.h": "c",
-        "freertos.h": "c"
+        "freertos.h": "c",
+        "config.h": "c"
     }
 }
