incluida la api de motor, sigue panickeando, hay que revisar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "esp_log.h": "c",
         "pulse_cnt.h": "c",
         "freertos.h": "c",
-        "config.h": "c"
+        "config.h": "c",
+        "bdc_motor.h": "c",
+        "gpio.h": "c"
     }
 }
