--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "freertos.h": "c",
         "config.h": "c",
         "bdc_motor.h": "c",
-        "gpio.h": "c"
+        "gpio.h": "c",
+        "esp_attr.h": "c"
     }
 }
